--- a/packages/community-cli-plugin/package.json
+++ b/packages/community-cli-plugin/package.json
@@ -31,6 +31,7 @@
     "metro": "^0.80.0",
     "metro-config": "^0.80.0",
     "metro-core": "^0.80.0",
+    "micromatch": "^4.0.5",
     "node-fetch": "^2.2.0",
     "readline": "^1.3.0"
   },
